Корректирует путь к локальным шрифтам

--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -4,11 +4,9 @@
   font-style: normal;
   font-weight: 400;
   src: local("Roboto"), local("Roboto-Regular"),
-    url("../../fonts/roboto/roboto-v20-latin-cyrillic-400.woff2")
-      format("woff2"),
+    url("../fonts/roboto/roboto-v20-latin-cyrillic-400.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../../fonts/roboto/roboto-v20-latin-cyrillic-400.woff")
-      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("../fonts/roboto/roboto-v20-latin-cyrillic-400.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* roboto-500 - latin_cyrillic */
 @font-face {
@@ -16,11 +14,9 @@
   font-style: normal;
   font-weight: 500;
   src: local("Roboto Medium"), local("Roboto-Medium"),
-    url("../../fonts/roboto/roboto-v20-latin-cyrillic-500.woff2")
-      format("woff2"),
+    url("../fonts/roboto/roboto-v20-latin-cyrillic-500.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../../fonts/roboto/roboto-v20-latin-cyrillic-500.woff")
-      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("../fonts/roboto/roboto-v20-latin-cyrillic-500.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* roboto-700 - latin_cyrillic */
 @font-face {
@@ -28,11 +24,9 @@
   font-style: normal;
   font-weight: 700;
   src: local("Roboto Bold"), local("Roboto-Bold"),
-    url("../../fonts/roboto/roboto-v20-latin-cyrillic-700.woff2")
-      format("woff2"),
+    url("../fonts/roboto/roboto-v20-latin-cyrillic-700.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../../fonts/roboto/roboto-v20-latin-cyrillic-700.woff")
-      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("../fonts/roboto/roboto-v20-latin-cyrillic-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* roboto-900 - latin_cyrillic */
 @font-face {
@@ -40,11 +34,9 @@
   font-style: normal;
   font-weight: 900;
   src: local("Roboto Black"), local("Roboto-Black"),
-    url("../../fonts/roboto/roboto-v20-latin-cyrillic-900.woff2")
-      format("woff2"),
+    url("../fonts/roboto/roboto-v20-latin-cyrillic-900.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../../fonts/roboto/roboto-v20-latin-cyrillic-900.woff")
-      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("../fonts/roboto/roboto-v20-latin-cyrillic-900.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
 /* raleway-700 - latin_cyrillic */
@@ -53,9 +45,7 @@
   font-style: normal;
   font-weight: 700;
   src: local("Raleway Bold"), local("Raleway-Bold"),
-    url("../../fonts/raleway/raleway-v17-latin-cyrillic-700.woff2")
-      format("woff2"),
+    url("../fonts/raleway/raleway-v17-latin-cyrillic-700.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../../fonts/raleway/raleway-v17-latin-cyrillic-700.woff")
-      format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("../fonts/raleway/raleway-v17-latin-cyrillic-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
