--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -3,7 +3,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: local("Roboto"), local("Roboto-Regular"), url("../../fonts/roboto/roboto-v20-latin-cyrillic-400.woff2") format("woff2"), url("../../fonts/roboto/roboto-v20-latin-cyrillic-400.woff") format("woff");
+  src: local("Roboto"), local("Roboto-Regular"), url("../fonts/roboto/roboto-v20-latin-cyrillic-400.woff2") format("woff2"), url("../fonts/roboto/roboto-v20-latin-cyrillic-400.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -12,7 +12,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
-  src: local("Roboto Medium"), local("Roboto-Medium"), url("../../fonts/roboto/roboto-v20-latin-cyrillic-500.woff2") format("woff2"), url("../../fonts/roboto/roboto-v20-latin-cyrillic-500.woff") format("woff");
+  src: local("Roboto Medium"), local("Roboto-Medium"), url("../fonts/roboto/roboto-v20-latin-cyrillic-500.woff2") format("woff2"), url("../fonts/roboto/roboto-v20-latin-cyrillic-500.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -21,7 +21,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  src: local("Roboto Bold"), local("Roboto-Bold"), url("../../fonts/roboto/roboto-v20-latin-cyrillic-700.woff2") format("woff2"), url("../../fonts/roboto/roboto-v20-latin-cyrillic-700.woff") format("woff");
+  src: local("Roboto Bold"), local("Roboto-Bold"), url("../fonts/roboto/roboto-v20-latin-cyrillic-700.woff2") format("woff2"), url("../fonts/roboto/roboto-v20-latin-cyrillic-700.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -30,7 +30,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 900;
-  src: local("Roboto Black"), local("Roboto-Black"), url("../../fonts/roboto/roboto-v20-latin-cyrillic-900.woff2") format("woff2"), url("../../fonts/roboto/roboto-v20-latin-cyrillic-900.woff") format("woff");
+  src: local("Roboto Black"), local("Roboto-Black"), url("../fonts/roboto/roboto-v20-latin-cyrillic-900.woff2") format("woff2"), url("../fonts/roboto/roboto-v20-latin-cyrillic-900.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -39,7 +39,7 @@
   font-family: "Raleway";
   font-style: normal;
   font-weight: 700;
-  src: local("Raleway Bold"), local("Raleway-Bold"), url("../../fonts/raleway/raleway-v17-latin-cyrillic-700.woff2") format("woff2"), url("../../fonts/raleway/raleway-v17-latin-cyrillic-700.woff") format("woff");
+  src: local("Raleway Bold"), local("Raleway-Bold"), url("../fonts/raleway/raleway-v17-latin-cyrillic-700.woff2") format("woff2"), url("../fonts/raleway/raleway-v17-latin-cyrillic-700.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
